--- a/style.css
+++ b/style.css
@@ -5,19 +5,62 @@
 #genTitleBtn {
     color: #1358c0;
 }
-    #genTitleBtn:hover {
-        color: #003688;
-    }
-    #genTitleBtn:focus {
-        color: #0d6efd;
-    }
+
+#genTitleBtn:hover {
+    color: #003688;
+}
+
+#genTitleBtn:focus {
+    color: #0d6efd;
+}
 
 #generatedName {
     color: whitesmoke;
 }
-    #generatedName:hover {
-        color: #0d6efd;
-    }
-    #generatedName:focus {
-        color: red;
-    }
+
+#generatedName:hover {
+    color: #0d6efd;
+}
+
+#generatedName:focus {
+    color: red;
+}
+
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: rgb(26, 36, 54);}
+
+.show {display: block;}
